Minor edit in task 2 (data viz) documentation

--- a/Task_Two/DataVisualization.ipynb
+++ b/Task_Two/DataVisualization.ipynb
@@ -486,6 +486,10 @@
    "source": [
     "# Data Visualization:\n",
     "We are finally ready to visualize our data `VizData`\n",
+    "We assume that all the people in `VizData` are equally capable of funding our project (since they have all funded over $20)\n",
+    "\n",
+    "So our primary objective in `VizData` is to find a group where most people may fund our project, not a group where people may fund the most. (We only need $20)\n",
+    "\n",
     "\n",
     "The first step is to import the necessary libraries.\n",
     "\n",
